--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
+<link href="homestyle.css
+" rel="stylesheet">
 <img>
 <button class="button1" onclick="location.href = 'homeapp.html';" "="">installer</button>
