--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link href="homestyle.css
 " rel="stylesheet">
-<img>
-<button class="button1" onclick="location.href = 'homeapp.html';" "="">installer</button>
+<font> color="white" </font>
+<center>
+  <button class="button1" onclick="location.href = 'homeapp.html';" "="">installer</button></center>
