--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <link href="homestyle.css
 " rel="stylesheet">
 <font color="white" 
-<font face="arial">
+<font face="arial"><center>
   <br><h1>installation de l'app</h1>
   <br><h2>pour installer clique sur instaler puis appuiller sur partager>ajouter a l'ecran d'accueil.</h2></font>
-<center>
+
   <button class="button1" onclick="location.href = 'homeapp.html';" "="">installer</button></center></font>
                                                                         
