--- a/home.html
+++ b/home.html
@@ -11,6 +11,8 @@
 " rel="stylesheet">
 <title>CMassage</title>
 <link rel="icon" href="img/weblogo.png" />
+<font color="white" 
+<font face="arial">
 <nav>
   <ul>
     <li><a href="home.html"><b>home</b></a></li>
@@ -19,3 +21,5 @@
     <li><a href="contact.html">contact</a></li>
   </ul>
 </nav>
+
+</font></font>
