--- a/home.html
+++ b/home.html
@@ -15,10 +15,10 @@
 <font face="arial">
 <nav>
   <ul>
-    <li><a href="home.html"><b>home</b></a></li>
-    <li><a href="cours.html">cours</a></li>
-        <li><a href="forum.html">forum</a></li>
-    <li><a href="contact.html">contact</a></li>
+    <li><a onclick="location.href = 'homeapp.html';" "=""><b>home</b></a></li>
+    <li><a onclick="location.href = 'homeapp.html';" "="">cours</a></li>
+        <li><a onclick="location.href = 'homeapp.html';" "="">forum</a></li>
+    <li><a onclick="location.href = 'homeapp.html';" "="">contact</a></li>
   </ul>
 </nav>
 
